# telepirate

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile-surrealdb  Dockerfile-telegram-api  README.md  cookies.json  deploy-docker-compose.template  docker-compose.yml  history.txt  rustfmt.toml
cont-init.d/: 0001-upgrade-packages
cookies/: README.md
dockerfiles/: Dockerfile-surrealdb  Dockerfile-telegram-api  Dockerfile-telepirate
services.d/crond/: run
services.d/telepirate/: run
src/: bot.rs  database.rs  engine.rs  logger.rs  main.rs  misc.rs  pirate.rs  task.rs  telepirate.rs  tracing.rs  trackedmessage.rs
src/task/: cancellation.rs  download.rs  id.rs  mediatype.rs  mod.rs  simple.rs  state.rs  stats.rs  traits.rs
