[package]
name = "telepirate"
version = "1.8.4"
edition = "2024"

[profile.dev]
strip = true
opt-level = 0
codegen-units = 256

[profile.release]
strip = true
opt-level = 0
codegen-units = 256

# These optimisations add hours to build time binary optimisations are not a bottleneck of this program, this is why turned off
# [profile.release]
# strip = true
# opt-level = 3
# lto = "fat"
# codegen-units = 1
# panic = "abort"

[dependencies]
ctrlc = { version = "3.5.0", features = ["termination"], default-features = false }
glob = { version = "0.3.3", default-features = false }
humantime = { version = "2.3.0", default-features = false }
lazy_static = "1.5.0"
log = { version = "0.4.28", default-features = false }
nix = "0.30.1"
regex = { version = "1.11.2", default-features = false }
reqwest = { version = "0.12.23", default-features = false }
scopeguard = "1.2.0"
serde = { version = "1.0.226", default-features = false, features = ["derive"] }
serde_json = "1.0.145"
serde_type_name = { version = "0.2.0", default-features = false }
surrealdb = { version = "2.3.10", default-features = false, features = ["protocol-ws"] }
teloxide = { version = "0.17.0", default-features = false, features = ["webhooks-axum", "macros"] }
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "macros", "process"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = { version = "2.5.7", default-features = false }
uuid = { version = "1.18.1", default-features = false, features = ["serde", "v4"] }
walkdir = { version = "2.5.0", default-features = false }
